--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,20 @@
 <header>
-  <mat-toolbar color="primary">
-    <a class="title">Build-A-Meal</a>
-    <a [routerLink]="['/']" class="logo-main"></a>
-    <span class="example-spacer"></span>
-    <a class="visit-team-page-link" href="mailto:info@build-a-meal.net">&#9993; info@build-a-meal.net</a>
-    <a class="logo-small"></a>
-    <a class="visit-team-page-link" href="http://cs480-projects.github.io/teams-fall2018/PerlsOfTheC/index.html"> Visit our team page!</a>
-  </mat-toolbar>
+    <mat-toolbar color="primary">
+        <a class="title">Build-A-Meal</a>
+        <a [routerLink]="['/']" class="logo-main"></a>
+        <span class="example-spacer"></span>
+
+        <div class="container" fxLayout="column" fxLayoutAlign="center" fxLayoutGap="0">
+            <div>
+                <a class="email-link" href="mailto:info@build-a-meal.net">&#9993; info@build-a-meal.net</a>
+            </div>
+            <div>
+                <span class="logo-small"></span>
+                <a class="visit-team-page-link"
+                   href="http://cs480-projects.github.io/teams-fall2018/PerlsOfTheC/index.html"> Visit our team
+                    page!</a>
+            </div>
+        </div>
+
+    </mat-toolbar>
 </header>
