centered the Ingredient List under the find me recipe button

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,7 +14,7 @@
             <ul class="checkbox" id="ingredientCheckbox">
             </ul>
             <div style="text-align:center; font-size:14px; padding: 10px;">
-                <font color = "grey"><b> &#9432; Select items/filters to remove OR </b></font>
+                <span style="color: grey; "><b> &#9432; Select items/filters to remove OR </b></span>
                 <button class = "removeButton" onclick="removeAllIngredients()"> Clear All </button>
             </div>
         </fieldset>
