--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -29,10 +29,8 @@ body {
 
   /* ---------the ingredients list--------*/
   fieldset.group  {
-    margin: 0px;
-    margin-top:7px;
+    margin-top: 7px;
     padding: 0;
-    margin-bottom: 0px;
     border-color: #E8E9E3;
     border-style: solid;
   }
@@ -72,8 +70,7 @@ body {
     border-radius: 5px;
     padding: 20px;
     padding-top: 0px;
-    margin: auto;
-    margin-top:5px;
+    margin: auto 33px;
   }
 
   .removeButton {
