--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -150,4 +150,14 @@ body {
     visibility: visible;
   }
 
+  /*---------- filtersOn textbox ----------*/
+  .filtersOn {
+    margin:5%;
+    margin-bottom: 2px;
+    background-color: white;
+  }
+  .filtersText {
+    padding: 2%;
+  }
+
 }
