adjusted postion off the search/tooltip/ingredient

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -34,12 +34,12 @@
     <form [formGroup]="ingredientForm" #formDir="ngForm">
 
         <div class="form-group">
-            <button class="add" id = "add" onclick="addToCheckBox()"  style="float: right" ><span> Add </span></button>
+            <button class="add" id = "add"  style="float: right" ><span> Add </span></button>
             <span class="help"  style="float: right" ><span class = "tooltip"> ? <span class="tooltiptext">Simply
                 choose ingredients from the preloaded lists below and click to add to the ingredients list,
                 or search for a total of 10 ingredients. </span></span></span>
 
-            <div style="overflow: hidden; padding-right: .5em;">
+            <div style="overflow: hidden; padding-right: 2.2em;">
                 <input id="searchBar" placeholder="Search" formControlName="ingredientName" class="form-control"
                        spellcheck="true" style="width: 97%">
             </div>
