adjusted formatting when changing browser window size

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,10 +5,13 @@
 <!--TODO: Fix all functions to work with angular instead of interacting with the old js file-->
 <body>
 <div class ="leftSide">
-    <button class = "findRecipes" onclick = "display()"><span>Find me recipes! </span></button>
 
-    <!--Ingredients List -->
-    <div class="ingredientList" style= "text-align:center">
+    <div style="text-align: center">
+        <button class = "findRecipes" onclick = "display()"><span>Find me recipes! </span></button>
+    </div>
+
+        <!--Ingredients List -->
+    <div class="ingredientList" style="text-align: center">
         <fieldset class="group">
             <legend>Ingredients List</legend>
             <ul class="checkbox" id="ingredientCheckbox">
