--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -70,7 +70,7 @@ body {
     border-radius: 5px;
     padding: 20px;
     padding-top: 0px;
-    margin: auto 33px;
+    margin: auto;
   }
 
   .removeButton {
