--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -37,7 +37,8 @@
     <form [formGroup]="ingredientForm" #formDir="ngForm">
 
         <div class="form-group">
-            <button class="add" id = "add"  style="float: right" ><span> Add </span></button>
+
+            <button class="add" id = "add" style="float: right" [disabled]="ingredientForm.invalid" ><span> Add </span></button>
             <span class="help"  style="float: right" ><span class = "tooltip"> ? <span class="tooltiptext">Simply
                 choose ingredients from the preloaded lists below and click to add to the ingredients list,
                 or search for a total of 10 ingredients. </span></span></span>
@@ -62,6 +63,11 @@
         </div>
 
     </form>
+
+    <div class="submitted-message" *ngIf="formDir.submitted">
+        <p>You've submitted your ingredient, {{ ingredientForm.value.ingredientName }}!</p>
+        <!--<button (click)="formDir.resetForm({})">Add new hero</button>-->
+    </div>
 
 </div>
 </body>
