--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -111,6 +111,20 @@ body {
     margin-left: 0;
     margin-right: 5%;
   }
+
+  .add:disabled {
+    font-family: "Dosis", cursive, sans-serif;
+    background-color: lightgray;
+    color: #eee;
+    cursor:not-allowed;
+    margin: 10px;
+    border: 1px solid transparent;
+    padding: 9px;
+    font-size: 16px;
+    width:25%;
+    margin-left: 0;
+    margin-right: 5%;
+  }
   .help {
     font-family: "Dosis", cursive, sans-serif;
     background-color: #C0C0C0;
