--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -62,6 +62,34 @@
         </div>
     </form>
 
+    <mat-expansion-panel class="accordion" [hideToggle]="true">
+
+        <mat-expansion-panel-header style=background:#D1DEB3 [collapsedHeight]="'50px'" [expandedHeight]="'50px'">
+            <mat-panel-title>
+                Protein
+            </mat-panel-title>
+            <mat-icon>
+                <img src="assets/meat.png" height="20" width="20" hspace="3" align="right">
+            </mat-icon>
+        </mat-expansion-panel-header>
+
+        <button class="foodOptions" id = "beef" value="beef" onclick="addIngredient(this.id)">beef</button>
+        <button class="foodOptions" id = "chicken" value="chicken" onclick="addIngredient(this.id)">chicken</button>
+        <button class="foodOptions" id = "pork" value="pork" onclick="addIngredient(this.id)">pork</button>
+        <button class="foodOptions" id = "shrimp" value="shrimp" onclick="addIngredient(this.id)">shrimp</button>
+        <button class="foodOptions" id = "lamb" value="lamb" onclick="addIngredient(this.id)">lamb</button>
+        <button class="foodOptions" id = "salmon" value="salmon" onclick="addIngredient(this.id)">salmon</button>
+        <button class="foodOptions" id = "oyster" value="oyster" onclick="addIngredient(this.id)">oyster</button>
+        <button class="foodOptions" id = "clam" value="clam" onclick="addIngredient(this.id)">clam</button>
+        <button class="foodOptions" id = "lobster" value="lobster" onclick="addIngredient(this.id)">lobster</button>
+        <button class="foodOptions" id = "crab" value="crab" onclick="addIngredient(this.id)">crab</button>
+
+    </mat-expansion-panel>
+
+    <!--filtering selection -->
+    <!--<button class="accordion" style = background:#D1DEB3 >Protein<img src = "assets/meat.png" height="20" width="20" hspace="3" align= "right"></button>-->
+    <!--<div class="panel">-->
+    <!--</div>-->
 
 </div>
 </body>
