--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -184,4 +184,33 @@ body {
     padding: 2%;
   }
 
+  /* ---------accordion ---------*/
+.accordion {
+  font-family: "Dosis", cursive, sans-serif;
+  font-weight: bold;
+  width: 90%;
+  border: none;
+  box-shadow: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  margin: 0px 5%;
+}
+.filler {
+  line-height: 100px;
+}
+.foodOptions {
+  font-family: "Dosis", cursive, sans-serif;
+  background-color: #d4d8d8;
+  border: none;
+  color: black;
+  padding: 5px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  margin: 5px 2.5px 5px 5px;
+  cursor: pointer;
+  border-radius: 8px;
+}
 }
