--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -213,4 +213,68 @@ body {
   cursor: pointer;
   border-radius: 8px;
 }
+  /* ---------animated effect for buttons--------*/
+  .findRecipes span, .remove span, .add span{
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  .findRecipes span:after, .remove span:after, .add span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+  .findRecipes:hover span , .remove:hover span, .add:hover span  {
+    padding-right: 25px;
+  }
+  .findRecipes:hover span:after, .remove:hover span:after, .add:hover span:after{
+    opacity: 1;
+    right: 0;
+  }
+
+
+  /* ---------right scroll bar--------*/
+  .right {
+    margin-top: 10vh;
+    height:90vh;
+    background-color: #eff2ef;
+    text-align: left;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    overflow-y: scroll;
+    width: 70%;
+  }
+
+  .bannerBackground {
+    margin: 1vw;
+    background-color: white;
+    border-style: solid;
+    border-color: #D0D0D0;
+    border-width: 2px;
+  }
+
+
+  #upButton {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: #e6d6c0;
+    cursor: pointer;
+    padding: 5px 10px;
+    border-radius: 4px;
+  }
+
+  #upButton:hover {
+    background-color: #555;
+  }
 }
