added displayResults from BaM 1.0

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
 <div class ="leftSide">
 
     <div style="text-align: center">
-        <button class = "findRecipes" onclick = "display()"><span>Find me recipes! </span></button>
+        <button class = "findRecipes"  (click)= "displayResults()"><span>Find me recipes! </span></button>
     </div>
 
         <!--Ingredients List -->
@@ -352,7 +352,7 @@
 
 <button (click)="scrollToTop()" id="upButton" title="Go to top">&#8593;</button>
 
-<div class="right" id = "rightID" onscroll="showTopButton()">
+<div class="right" id = "rightID"  (scroll)="showTopButton()">
     <div class = "bannerBackground">
         <p id = "bannerIngredients" style="margin:5px;"><b> Showing results for: </b></p>
         <p id = "bannerFilters" style="margin:5px;"><b> Filters applied: </b></p>
