fixed layout issues with result boxes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
 <div class ="leftSide">
 
     <div style="text-align: center">
-        <button class = "findRecipes"  (click)= "displayResults()"><span>Find me recipes! </span></button>
+        <button class = "findRecipes"  (click)= "displayResults(10)"><span>Find me recipes! </span></button>
     </div>
 
         <!--Ingredients List -->
